@@ -17,13 +17,24 @@ module GeneratorTestHelpers
     copy_to_generator_root("config/initializers", "shopify_app.rb")
   end
 
+  def provide_existing_initializer_file_with_webhooks
+    copy_to_generator_root("config/initializers", "shopify_app_with_webhooks.rb", rename: 'shopify_app.rb')
+  end
+
   private
 
-  def copy_to_generator_root(destination, template)
+  def copy_to_generator_root(destination, template, rename: nil)
     template_file = File.join(TEMPLATE_PATH, destination, template)
     destination = File.join(destination_root, destination)
 
     FileUtils.mkdir_p(destination)
     FileUtils.cp(template_file, destination)
+
+    if rename
+      FileUtils.mv(
+        File.join(destination, template),
+        File.join(destination, rename),
+      )
+    end
   end
 end
